Fixed layout issue with map in student requests

--- a/public/queue/css/queue.css
+++ b/public/queue/css/queue.css
@@ -74,7 +74,7 @@
 }
 
 .queue-entryMap {
-    height: 100%;
+    width: 100%;
 }
 
 body {
